# minara-scheme

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  configure.ac  configure.in  minara.minara
doc/: minara-design.tex  minara-refcard.tex
dotminara/: minara.minara
lisp/: Makefile.am  buffer.scm  colour-tools.scm  command-line.scm  cut-and-paste.scm  development.scm  events.scm  expand-file-name.scm  fileutils.scm  fill.scm  find-file.scm  gap-buffer.scm  geometry.scm  keymap.scm  menu.scm  minara-bootstrap.scm  minara-test.scm  minara.scm  minibuffer.scm  pen-tool.scm  picking-hit.scm  picking-protocol.scm  picking.scm  rendering.scm  save-buffer.scm  selection.scm  sexp.scm  shape-tools.scm  split-string-no-nulls.scm  test.scm  tool.scm  transformations.scm  undo.scm  view-tools.scm  view.scm  window.scm  write-buffer-if-changed.scm  write-buffer.scm
lisp/minara/: Makefile.am  buffer.scm  colour-tools.scm  command-line.scm  config.scm  config.scm.in  cut-and-paste.scm  development.scm  events.scm  fill.scm  gap-buffer.scm  geometry.scm  keymap.scm  load-libraries.scm  menu.scm  minibuffer.scm  picking-hit.scm  picking-protocol.scm  picking.scm  selection.scm  sexp.scm  shape-tools.scm  tool.scm  transformations.scm  undo.scm  view.scm  window.scm
lisp/minara-internal/: Makefile.am  cairo-rendering.scm  gtk-application.scm
lisp/minara-test/: buffer-tests.scm  sexp-tests.scm
lisp/scripts/: Makefile.am  slurp.scm
lisp/test/: buffer-tests.scm  geometry-tests.scm  picking-tests.scm
lisp/tools/: Makefile.am  colour-tools.scm  pen-tools.scm  shape-tools.scm
macosx/minara.xcode/: ggs.pbxuser  project.pbxproj  robmyers.pbxuser
minara/: Makefile.am  acinclude.m4  minara.minara
minara/macosx/: Read Me
minara/macosx/English.lproj/: InfoPlist.strings
minara/macosx/minara.xcode/: project.pbxproj  robmyers.pbxuser
minara/src/: Makefile.am  minara_events.c  minara_guile.c  minara_guile.h  minara_main.h  minara_rendering.c  minara_window.c  minara_window.h
minara/tools/pstoedit/: INSTALL
src/: Makefile.am  minara_buffer.c  minara_buffer.h  minara_cache.c  minara_cache.h  minara_error.h  minara_events.c  minara_events.h  minara_guile.c  minara_guile.h  minara_main.c  minara_main.h  minara_menu.c  minara_menu.h  minara_rendering.c  minara_rendering.h  minara_window.c  minara_window.h  text.c  text.h
tools/minaraconv/: minaraconv.scm
tools/pstoedit/: drvminara.cpp
