dnl Process this file with autoconf to produce a configure script.

AC_INIT(minara, 0.0.1)
AC_CONFIG_SRCDIR(src/minara_main.c)
AM_INIT_AUTOMAKE

dnl Get the host, important for MacOS X
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
     
dnl Checks for libraries.
GUILE_FLAGS
AX_CHECK_GL
AX_CHECK_GLU
AX_CHECK_GLUT

dnl Checks for header files.
AC_HEADER_STDC

dnl Go!
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
