scriptdir = $(datadir)/minara/$(VERSION)/lisp

script_DATA = buffer.scm colour-tools.scm command-line.scm cut-and-paste.scm \
development.scm events.scm fill.scm find-file.scm \
gap-buffer.scm geometry.scm keymap.scm menu.scm minara-bootstrap.scm \
minara.scm minibuffer.scm pen-tool.scm picking.scm rendering.scm \
save-buffer.scm selection.scm shape-tools.scm slurp.scm \
split-string-no-nulls.scm test.scm tool.scm transformations.scm undo.scm \
view-tools.scm window.scm

EXTRA_DIST = $(script_DATA)