scriptdir = $(datadir)/minara/$(VERSION)/lisp

script_DATA = buffer.scm colour-tools.scm command-line.scm cut-and-paste.scm \
development.scm events.scm fill.scm \
gap-buffer.scm geometry.scm keymap.scm menu.scm minara-bootstrap.scm \
minibuffer.scm pen-tool.scm picking-protocol.scm picking.scm \
picking-hit.scm \
selection.scm sexp.scm shape-tools.scm slurp.scm \
split-string-no-nulls.scm test.scm tool.scm transformations.scm undo.scm \
view.scm window.scm

EXTRA_DIST = $(script_DATA)