minaradir = $(datadir)/minara/$(VERSION)/lisp/minara

minara_DATA = buffer.scm command-line.scm \
cut-and-paste.scm \
development.scm events.scm fill.scm \
geometry.scm keymap.scm load-libraries.scm menu.scm \
minibuffer.scm picking-protocol.scm picking.scm \
picking-hit.scm \
selection.scm sexp.scm \
split-string-no-nulls.scm tool.scm transformations.scm undo.scm \
view.scm window.scm

EXTRA_DIST = $(minara_DATA)
