minaradir = $(datadir)/$(PACKAGE)/$(VERSION)/lisp/$(PACKAGE)

minara_DATA = buffer.scm command-line.scm \
config.scm development.scm events.scm fill.scm \
geometry.scm keymap.scm load-libraries.scm \
minibuffer.scm picking-protocol.scm picking.scm \
picking-hit.scm \
selection.scm sexp.scm \
tool.scm transformations.scm undo.scm \
view.scm window.scm

EXTRA_DIST = $(minara_DATA)
